crates/ryft-macros-tests/tests/parameters/error_self.stderr
error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:28:15
   |
28 |     _f4: [(); Self::ASSOC],
   |               ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:29:15
   |
29 |     _f5: [(); Self::assoc()],
   |               ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:44:77
   |
44 | pub struct Tuple<P: Parameter>(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]);
   |                                                                             ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:44:96
   |
44 | pub struct Tuple<P: Parameter>(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]);
   |                                                                                                ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:63:19
   |
63 |         _f4: [(); Self::ASSOC],
   |                   ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:64:19
   |
64 |         _f5: [(); Self::assoc()],
   |                   ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:66:56
   |
66 |     Tuple(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]),
   |                                                        ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:66:75
   |
66 |     Tuple(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]),
   |                                                                           ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error[E0425]: cannot find type `P` in this scope
  --> tests/parameters/error_self.rs:10:52
   |
10 | pub struct Generics<P: Parameter, T: Trait<Assoc = Self>>
   |                                   -                ^^^^ help: a type parameter with a similar name exists: `T`
   |                                   |
   |                                   similarly named type parameter `T` defined here

error[E0271]: type mismatch resolving `<T as Trait>::Assoc == Generics<Placeholder, T>`
  --> tests/parameters/error_self.rs:9:10
   |
 9 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ expected `Generics<Placeholder, T>`, found `Generics<P, T>`
10 | pub struct Generics<P: Parameter, T: Trait<Assoc = Self>>
   |                     - found this type parameter
   |
   = note: expected struct `Generics<Placeholder, T>`
              found struct `Generics<P, T>`
note: required for `Generics<Placeholder, T>` to implement `Trait`
  --> tests/parameters/error_self.rs:19:44
   |
19 | impl<P: Parameter, T: Trait<Assoc = Self>> Trait for Generics<P, T> {
   |                             ------------   ^^^^^     ^^^^^^^^^^^^^^
   |                             |
   |                             unsatisfied trait bound introduced here
note: required for `Generics<Placeholder, T>` to implement `ParameterizedFamily`
  --> tests/parameters/error_self.rs:9:10
   |
 9 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^
...
13 |     <Self as Trait>::Assoc: Sized,
   |                             ----- unsatisfied trait bound introduced in this `derive` macro
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:28:15
   |
28 |     _f4: [(); Self::ASSOC],
   |               ^^^^

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:29:15
   |
29 |     _f5: [(); Self::assoc()],
   |               ^^^^

error[E0277]: the trait bound `Box<Struct<__P>>: Parameterized<__P>` is not satisfied
  --> tests/parameters/error_self.rs:24:12
   |
24 | pub struct Struct<P: Parameter> {
   |            ^^^^^^^^^^^^^^^^^^^^ the trait `Parameterized<__P>` is not implemented for `Box<Struct<__P>>`
   |
note: required for `Struct<__P>` to implement `Parameterized<__P>`
  --> tests/parameters/error_self.rs:23:10
   |
23 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
24 | pub struct Struct<P: Parameter> {
   |            ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `ryft::ParameterizedFamily::To`
  --> $WORKSPACE/crates/ryft-core/src/parameters.rs
   |
   |     type To<T: Parameter>: Parameterized<T, Family = Self>;
   |                                             ^^^^^^^^^^^^^ required by this bound in `ParameterizedFamily::To`
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `(): Parameterized<__P>` is not satisfied
  --> tests/parameters/error_self.rs:24:12
   |
24 | pub struct Struct<P: Parameter> {
   |            ^^^^^^^^^^^^^^^^^^^^ the trait `Parameterized<__P>` is not implemented for `()`
   |
   = help: the following other types implement trait `Parameterized<P>`:
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
             (T0, T1, T2, T3, T4, T5, T6, T7, T8)
           and $N others
   = note: required for `[(); {const error}]` to implement `Parameterized<__P>`
   = note: 1 redundant requirement hidden
   = note: required for `Struct<__P>` to implement `Parameterized<__P>`
note: required by a bound in `ryft::ParameterizedFamily::To`
  --> $WORKSPACE/crates/ryft-core/src/parameters.rs
   |
   |     type To<T: Parameter>: Parameterized<T, Family = Self>;
   |                                             ^^^^^^^^^^^^^ required by this bound in `ParameterizedFamily::To`

error[E0277]: the trait bound `Box<Struct<Placeholder>>: Parameterized<Placeholder>` is not satisfied
  --> tests/parameters/error_self.rs:23:10
   |
23 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ the trait `Parameterized<Placeholder>` is not implemented for `Box<Struct<Placeholder>>`
   |
   = help: the following other types implement trait `Parameterized<P>`:
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
             (T0, T1, T2, T3, T4, T5, T6, T7, T8)
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `(): Parameterized<Placeholder>` is not satisfied
  --> tests/parameters/error_self.rs:23:10
   |
23 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ the trait `Parameterized<Placeholder>` is not implemented for `()`
   |
   = help: the following other types implement trait `Parameterized<P>`:
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
             (T0, T1, T2, T3, T4, T5, T6, T7, T8)
           and $N others
   = note: required for `[(); 0]` to implement `Parameterized<Placeholder>`
   = help: see issue #48214
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:44:77
   |
44 | pub struct Tuple<P: Parameter>(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]);
   |                                                                             ^^^^

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:44:96
   |
44 | pub struct Tuple<P: Parameter>(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]);
   |                                                                                                ^^^^

error[E0277]: the trait bound `Box<Tuple<__P>>: Parameterized<__P>` is not satisfied
  --> tests/parameters/error_self.rs:44:12
   |
44 | pub struct Tuple<P: Parameter>(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]);
   |            ^^^^^^^^^^^^^^^^^^^ the trait `Parameterized<__P>` is not implemented for `Box<Tuple<__P>>`
   |
note: required for `Tuple<__P>` to implement `Parameterized<__P>`
  --> tests/parameters/error_self.rs:43:10
   |
43 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
44 | pub struct Tuple<P: Parameter>(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]);
   |            ^^^^^^^^^^^^^^^^^^^
note: required by a bound in `ryft::ParameterizedFamily::To`
  --> $WORKSPACE/crates/ryft-core/src/parameters.rs
   |
   |     type To<T: Parameter>: Parameterized<T, Family = Self>;
   |                                             ^^^^^^^^^^^^^ required by this bound in `ParameterizedFamily::To`
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `(): Parameterized<__P>` is not satisfied
  --> tests/parameters/error_self.rs:44:12
   |
44 | pub struct Tuple<P: Parameter>(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]);
   |            ^^^^^^^^^^^^^^^^^^^ the trait `Parameterized<__P>` is not implemented for `()`
   |
   = help: the following other types implement trait `Parameterized<P>`:
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
             (T0, T1, T2, T3, T4, T5, T6, T7, T8)
           and $N others
   = note: required for `[(); {const error}]` to implement `Parameterized<__P>`
   = note: 1 redundant requirement hidden
   = note: required for `Tuple<__P>` to implement `Parameterized<__P>`
note: required by a bound in `ryft::ParameterizedFamily::To`
  --> $WORKSPACE/crates/ryft-core/src/parameters.rs
   |
   |     type To<T: Parameter>: Parameterized<T, Family = Self>;
   |                                             ^^^^^^^^^^^^^ required by this bound in `ParameterizedFamily::To`

error[E0277]: the trait bound `Box<Tuple<Placeholder>>: Parameterized<Placeholder>` is not satisfied
  --> tests/parameters/error_self.rs:43:10
   |
43 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ the trait `Parameterized<Placeholder>` is not implemented for `Box<Tuple<Placeholder>>`
   |
   = help: the following other types implement trait `Parameterized<P>`:
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
             (T0, T1, T2, T3, T4, T5, T6, T7, T8)
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `(): Parameterized<Placeholder>` is not satisfied
  --> tests/parameters/error_self.rs:43:10
   |
43 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ the trait `Parameterized<Placeholder>` is not implemented for `()`
   |
   = help: the following other types implement trait `Parameterized<P>`:
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
             (T0, T1, T2, T3, T4, T5, T6, T7, T8)
           and $N others
   = note: required for `[(); 0]` to implement `Parameterized<Placeholder>`
   = help: see issue #48214
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:63:19
   |
63 |         _f4: [(); Self::ASSOC],
   |                   ^^^^

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:64:19
   |
64 |         _f5: [(); Self::assoc()],
   |                   ^^^^

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:66:56
   |
66 |     Tuple(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]),
   |                                                        ^^^^

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:66:75
   |
66 |     Tuple(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]),
   |                                                                           ^^^^

error[E0277]: the trait bound `Box<Enum<__P>>: Parameterized<__P>` is not satisfied
  --> tests/parameters/error_self.rs:58:10
   |
58 | pub enum Enum<P: Parameter> {
   |          ^^^^^^^^^^^^^^^^^^ the trait `Parameterized<__P>` is not implemented for `Box<Enum<__P>>`
   |
note: required for `Enum<__P>` to implement `Parameterized<__P>`
  --> tests/parameters/error_self.rs:57:10
   |
57 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
58 | pub enum Enum<P: Parameter> {
   |          ^^^^^^^^^^^^^^^^^^
note: required by a bound in `ryft::ParameterizedFamily::To`
  --> $WORKSPACE/crates/ryft-core/src/parameters.rs
   |
   |     type To<T: Parameter>: Parameterized<T, Family = Self>;
   |                                             ^^^^^^^^^^^^^ required by this bound in `ParameterizedFamily::To`
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `(): Parameterized<__P>` is not satisfied
  --> tests/parameters/error_self.rs:58:10
   |
58 | pub enum Enum<P: Parameter> {
   |          ^^^^^^^^^^^^^^^^^^ the trait `Parameterized<__P>` is not implemented for `()`
   |
   = help: the following other types implement trait `Parameterized<P>`:
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
             (T0, T1, T2, T3, T4, T5, T6, T7, T8)
           and $N others
   = note: required for `[(); {const error}]` to implement `Parameterized<__P>`
   = note: 1 redundant requirement hidden
   = note: required for `Enum<__P>` to implement `Parameterized<__P>`
note: required by a bound in `ryft::ParameterizedFamily::To`
  --> $WORKSPACE/crates/ryft-core/src/parameters.rs
   |
   |     type To<T: Parameter>: Parameterized<T, Family = Self>;
   |                                             ^^^^^^^^^^^^^ required by this bound in `ParameterizedFamily::To`

error[E0277]: the trait bound `Box<Enum<Placeholder>>: Parameterized<Placeholder>` is not satisfied
  --> tests/parameters/error_self.rs:57:10
   |
57 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ the trait `Parameterized<Placeholder>` is not implemented for `Box<Enum<Placeholder>>`
   |
   = help: the following other types implement trait `Parameterized<P>`:
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
             (T0, T1, T2, T3, T4, T5, T6, T7, T8)
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `(): Parameterized<Placeholder>` is not satisfied
  --> tests/parameters/error_self.rs:57:10
   |
57 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ the trait `Parameterized<Placeholder>` is not implemented for `()`
   |
   = help: the following other types implement trait `Parameterized<P>`:
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
             (T0, T1, T2, T3, T4, T5, T6, T7, T8)
           and $N others
   = note: required for `[(); 1]` to implement `Parameterized<Placeholder>`
   = help: see issue #48214
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<T as Trait>::Assoc == Generics<Placeholder, T>`
  --> tests/parameters/error_self.rs:9:10
   |
 9 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ expected `Generics<Placeholder, T>`, found `Generics<P, T>`
10 | pub struct Generics<P: Parameter, T: Trait<Assoc = Self>>
   |                     - found this type parameter
   |
   = note: expected struct `Generics<Placeholder, T>`
              found struct `Generics<P, T>`
note: required by a bound in `Generics`
  --> tests/parameters/error_self.rs:10:44
   |
10 | pub struct Generics<P: Parameter, T: Trait<Assoc = Self>>
   |                                            ^^^^^^^^^^^^ required by this bound in `Generics`
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<T as Trait>::Assoc == Generics<__P, T>`
  --> tests/parameters/error_self.rs:9:10
   |
 9 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ expected `Generics<__P, T>`, found `Generics<P, T>`
10 | pub struct Generics<P: Parameter, T: Trait<Assoc = Self>>
   |                     - found type parameter
   |
   = note: expected struct `Generics<__P, T>`
              found struct `Generics<P, T>`
   = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters
note: required by a bound in `Generics`
  --> tests/parameters/error_self.rs:10:44
   |
10 | pub struct Generics<P: Parameter, T: Trait<Assoc = Self>>
   |                                            ^^^^^^^^^^^^ required by this bound in `Generics`
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/parameters/error_self.rs:9:10
   |
 9 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ expected type parameter `P`, found `Placeholder`
10 | pub struct Generics<P: Parameter, T: Trait<Assoc = Self>>
   |                     - expected this type parameter
   |
   = note: expected type parameter `P`
                      found struct `Placeholder`
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/parameters/error_self.rs:9:10
   |
 9 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^
   |          |
   |          expected `Generics<Placeholder, T>`, found `Generics<P, T>`
   |          expected `Generics<Placeholder, T>` because of return type
10 | pub struct Generics<P: Parameter, T: Trait<Assoc = Self>>
   |                     - found this type parameter
   |
   = note: expected struct `Generics<Placeholder, T>`
              found struct `Generics<P, T>`
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)
